[gd_scene load_steps=4 format=3 uid="uid://bkj3m8yap2qrl"]

[ext_resource type="Script" uid="uid://dr1j1h5vorpj1" path="res://game/ui/SettingsMenu.gd" id="1_settings"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.2, 0.2, 0.3, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="SettingsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
text = "CONFIGURACIONES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="AudioSection" type="VBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="SettingsPanel/VBoxContainer/AudioSection"]
layout_mode = 2
text = "Audio"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="SettingsPanel/VBoxContainer/AudioSection"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="SettingsPanel/VBoxContainer/AudioSection/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volumen Principal:"

[node name="MasterVolumeSlider" type="HSlider" parent="SettingsPanel/VBoxContainer/AudioSection/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="MasterVolumeValue" type="Label" parent="SettingsPanel/VBoxContainer/AudioSection/MasterVolumeContainer"]
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="MusicVolumeContainer" type="HBoxContainer" parent="SettingsPanel/VBoxContainer/AudioSection"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="SettingsPanel/VBoxContainer/AudioSection/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volumen Música:"

[node name="MusicVolumeSlider" type="HSlider" parent="SettingsPanel/VBoxContainer/AudioSection/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 80.0

[node name="MusicVolumeValue" type="Label" parent="SettingsPanel/VBoxContainer/AudioSection/MusicVolumeContainer"]
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="SfxVolumeContainer" type="HBoxContainer" parent="SettingsPanel/VBoxContainer/AudioSection"]
layout_mode = 2

[node name="SfxVolumeLabel" type="Label" parent="SettingsPanel/VBoxContainer/AudioSection/SfxVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volumen Efectos:"

[node name="SfxVolumeSlider" type="HSlider" parent="SettingsPanel/VBoxContainer/AudioSection/SfxVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="SfxVolumeValue" type="Label" parent="SettingsPanel/VBoxContainer/AudioSection/SfxVolumeContainer"]
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="VideoSection" type="VBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="VideoLabel" type="Label" parent="SettingsPanel/VBoxContainer/VideoSection"]
layout_mode = 2
text = "Video"

[node name="ResolutionContainer" type="HBoxContainer" parent="SettingsPanel/VBoxContainer/VideoSection"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="SettingsPanel/VBoxContainer/VideoSection/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolución:"

[node name="ResolutionOption" type="OptionButton" parent="SettingsPanel/VBoxContainer/VideoSection/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 6
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1680x1050"
popup/item_1/id = 1
popup/item_2/text = "1600x900"
popup/item_2/id = 2
popup/item_3/text = "1366x768"
popup/item_3/id = 3
popup/item_4/text = "1280x720"
popup/item_4/id = 4
popup/item_5/text = "1024x768"
popup/item_5/id = 5

[node name="FullscreenContainer" type="HBoxContainer" parent="SettingsPanel/VBoxContainer/VideoSection"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="SettingsPanel/VBoxContainer/VideoSection/FullscreenContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pantalla Completa:"

[node name="FullscreenCheckbox" type="CheckBox" parent="SettingsPanel/VBoxContainer/VideoSection/FullscreenContainer"]
layout_mode = 2

[node name="VSyncContainer" type="HBoxContainer" parent="SettingsPanel/VBoxContainer/VideoSection"]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="SettingsPanel/VBoxContainer/VideoSection/VSyncContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "VSync:"

[node name="VSyncCheckbox" type="CheckBox" parent="SettingsPanel/VBoxContainer/VideoSection/VSyncContainer"]
layout_mode = 2
button_pressed = true

[node name="QualityContainer" type="HBoxContainer" parent="SettingsPanel/VBoxContainer/VideoSection"]
layout_mode = 2

[node name="QualityLabel" type="Label" parent="SettingsPanel/VBoxContainer/VideoSection/QualityContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Calidad Gráfica:"

[node name="QualityOption" type="OptionButton" parent="SettingsPanel/VBoxContainer/VideoSection/QualityContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 1
item_count = 3
popup/item_0/text = "Baja"
popup/item_0/id = 0
popup/item_1/text = "Media"
popup/item_1/id = 1
popup/item_2/text = "Alta"
popup/item_2/id = 2

[node name="HSeparator3" type="HSeparator" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="ControlsSection" type="VBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="SettingsPanel/VBoxContainer/ControlsSection"]
layout_mode = 2
text = "Controles"

[node name="ControlsInfo" type="Label" parent="SettingsPanel/VBoxContainer/ControlsSection"]
layout_mode = 2
text = "WASD/Flechas: Movimiento
E/Espacio: Interactuar
Escape: Menú"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="SettingsPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "Restablecer"

[node name="ApplyButton" type="Button" parent="SettingsPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "Aplicar"

[node name="BackButton" type="Button" parent="SettingsPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "Volver"

[connection signal="value_changed" from="SettingsPanel/VBoxContainer/AudioSection/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="SettingsPanel/VBoxContainer/AudioSection/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="SettingsPanel/VBoxContainer/AudioSection/SfxVolumeContainer/SfxVolumeSlider" to="." method="_on_sfx_volume_changed"]
[connection signal="item_selected" from="SettingsPanel/VBoxContainer/VideoSection/ResolutionContainer/ResolutionOption" to="." method="_on_resolution_selected"]
[connection signal="toggled" from="SettingsPanel/VBoxContainer/VideoSection/FullscreenContainer/FullscreenCheckbox" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="SettingsPanel/VBoxContainer/VideoSection/VSyncContainer/VSyncCheckbox" to="." method="_on_vsync_toggled"]
[connection signal="item_selected" from="SettingsPanel/VBoxContainer/VideoSection/QualityContainer/QualityOption" to="." method="_on_quality_selected"]
[connection signal="pressed" from="SettingsPanel/VBoxContainer/ButtonsContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="SettingsPanel/VBoxContainer/ButtonsContainer/ApplyButton" to="." method="_on_apply_button_pressed"]
[connection signal="pressed" from="SettingsPanel/VBoxContainer/ButtonsContainer/BackButton" to="." method="_on_back_button_pressed"]
